<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <!-- App title Bar of Activity -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="noScroll"
            app:title="@string/registerActivityHeading">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main Part (Content) of Activity -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- GUNI Logo Image -->
            <ImageView

                android:id="@+id/guniRegisterImg"

                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:contentDescription="@string/imageDescription"
                android:scaleType="centerCrop"

                android:src="@drawable/guni_logo"

                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior">

                    <!-- User Name EditText with Image Icon (Drawable) -->
                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/regusernameTextLayout"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"

                        android:hint="@string/usernameText"

                        app:startIconDrawable="@drawable/ic_baseline_person_24"
                        app:startIconTint="@color/pink"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/regUsernameEditText"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Phone Number -->
                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/regphoneTextLayout"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"

                        android:hint="@string/phoneNumberText"

                        app:startIconDrawable="@drawable/ic_baseline_phone_android_24"
                        app:startIconTint="@color/pink"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/regPhoneEditText"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- City -->
                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/regcityTextLayout"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"

                        android:hint="@string/cityText"

                        app:startIconDrawable="@drawable/ic_baseline_location_city_24"
                        app:startIconTint="@color/pink"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/regCityEditText"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Email EditText with Image Icon (Drawable) -->
                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/regemailTextLayout"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"

                        android:hint="@string/emailText"

                        app:layout_constraintBottom_toTopOf="@id/regPasswordTextLayout"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        app:startIconDrawable="@drawable/ic_baseline_email_24"
                        app:startIconTint="@color/pink"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/regEmailEditText"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Password EditText with Image Icon (Drawable) -->
                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/regPasswordTextLayout"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"

                        android:hint="@string/passwordText"

                        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                        app:startIconTint="@color/pink">

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/regPasswordEditText"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Confirm password -->
                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/regconfirmpasswordTextLayout"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="50dp"

                        android:hint="@string/confirmPasswordText"

                        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                        app:startIconTint="@color/pink">

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/regconfirmpasswordEditText"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Login Button -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="-25dp"
                android:elevation="25dp">

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/registerText"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- Signup Section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginTop="25dp"

                android:layout_marginBottom="25dp"
                android:gravity="center"

                >

                <!-- Message for Login -->
                <TextView

                    android:id="@+id/login_msg"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"

                    android:text="@string/loginMsg"
                    android:textSize="20sp"

                    android:textStyle="bold"

                    />

                <!-- Login Link -->
                <TextView

                    android:id="@+id/login_link"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:text="@string/loginText"

                    android:textAllCaps="true"
                    android:textColor="@color/pink"


                    android:textSize="20sp"

                    android:textStyle="bold"

                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        app:menu="@menu/navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>