<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    tools:context=".MainActivity">

    <!-- App title Bar of Activity -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:layout_scrollFlags="noScroll"
            app:title="@string/mainActivityHeading">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main Part (Content) of Activity -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <!-- GUNI Name Image -->
            <TextView

                android:id="@+id/guniText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="30dp"

                android:gravity="center"
                android:text="@string/GUNIText"
                android:textColor="@color/red"
                android:textSize="45sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/ganpatIcon"

                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintRight_toRightOf="parent"

                app:layout_constraintTop_toTopOf="parent"

                />

            <!-- GUNI Icon/Logo Image -->
            <ImageView

                android:id="@+id/ganpatIcon"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:contentDescription="@string/imageDescription"
                android:src="@drawable/ganpat_icon"

                app:layout_constraintBottom_toTopOf="@id/guniDescription"
                app:layout_constraintHeight="150dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                app:layout_constraintTop_toBottomOf="@id/guniText" />

            <TextView

                android:id="@+id/guniDescription"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"

                android:text="@string/GUNIDescription"
                android:textAlignment="center"


                android:textColor="@color/black"
                android:textSize="17sp"

                android:textStyle="bold"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintRight_toRightOf="parent"

                app:layout_constraintTop_toBottomOf="@id/ganpatIcon"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:menu="@menu/navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>