<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- App title Bar of Activity -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="noScroll"
            app:title="@string/loginActivityHeading"
            >

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main Part (Content) of Activity -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <!-- GUNI Logo Image -->
            <ImageView

                android:id="@+id/guniLoginImg"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:contentDescription="@string/imageDescription"
                android:src="@drawable/guni_logo"

                app:layout_constraintBottom_toTopOf="@id/LoginCard"
                app:layout_constraintLeft_toLeftOf="parent"

                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintHeight="100dp"

                android:scaleType="centerCrop"

                />

            <!-- Material Theme Card For Login -->
            <com.google.android.material.card.MaterialCardView

                android:id="@+id/LoginCard"

                app:layout_constraintTop_toBottomOf="@id/guniLoginImg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"


                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="10dp"

                >

                <!-- Email, Password, Forget Password Block -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <!--Email EditText with Image Icon (Drawable) -->
                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/loginUserTextLayout"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginVertical="20dp"
                        android:layout_marginHorizontal="20dp"

                        android:hint="@string/usernameText"

                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/loginPasswordTextLayout"

                        app:startIconDrawable="@drawable/ic_baseline_person_24"
                        app:startIconTint="@color/pink"

                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/loginUserEditText"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Password EditText with Image Icon (Drawable) -->
                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/loginPasswordTextLayout"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginVertical="20dp"
                        android:layout_marginHorizontal="20dp"

                        android:hint="@string/passwordText"


                        app:layout_constraintTop_toBottomOf="@id/loginUserTextLayout"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"

                        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
                        app:startIconTint="@color/pink"
                        >

                        <com.google.android.material.textfield.TextInputEditText

                            android:id="@+id/loginPasswordEditText"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!--Forget Password Text-->
                    <TextView
                        android:id="@+id/forget_password"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/forget_password_text"

                        android:padding="0dp"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="15dp"

                        android:textSize="18sp"

                        android:textAlignment="textEnd"

                        app:layout_constraintTop_toBottomOf="@id/loginPasswordTextLayout"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"

                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Login Button -->
            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toBottomOf="@id/LoginCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="25dp"
                android:layout_marginTop="-25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnLogin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/loginText" />

                <!-- Signup Section-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintTop_toBottomOf="@id/btnLogin"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:layout_marginTop="25dp"

                    >

                    <!-- Message for Sign UP Option -->
                    <TextView

                        android:id="@+id/signup_msg"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signupMsg"

                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/signup_link"
                        app:layout_constraintTop_toTopOf="parent"

                        android:textSize="20sp"
                        android:textStyle="bold"

                        android:layout_marginEnd="10dp"

                        />

                    <!-- Message for Sign UP Option -->
                    <TextView

                        android:id="@+id/signup_link"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signupText"

                        android:textAllCaps="true"

                        app:layout_constraintLeft_toRightOf="@id/signup_msg"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        android:textSize="20sp"
                        android:textStyle="bold"

                        android:layout_marginStart="10dp"

                        android:textColor="@color/pink"


                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottomNavigationView"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:menu="@menu/navigation_menu"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>